# Savime

./: .gitignore  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  Savime.kdev4  confdefs.h  config.h  config.status  configure  configure.ac  configure.ac~  configure_debug~  create_database.sql~  header  install_catalyst  install_hugetlbs  libtool
.kdev4/: Savime.kdev4
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
client/: Makefile  Makefile.am  Makefile.in  client  client.cpp  libhello.la  savimec
client/.deps/: client.Po
client/.libs/: libhello.lai  libhello.so.0.1.1
configuration/: default_config_manager.cpp  default_config_manager.h
configuration/.deps/: default_config_manager.Po  savime-default_config_manager.Po
connection/: default_connection_manager.cpp  default_connection_manager.h
connection/.deps/: connecionmanager.Po  connectionmanager.Po  default_connection_manager.Po  savime-default_connection_manager.Po
core/: Makefile  Makefile.am  Makefile.in  builder.cpp  gmon.out  main.cpp  metadata.cpp  query_data_manager.cpp  system_logger.cpp
core/.deps/: builder.Po  client.Po  connecionmanager.Po  default_system_logger.Po  main.Po  metadata.Po  query_data_manager.Po  savime-builder.Po  savime-main.Po  savime-metadata.Po  savime-query_data_manager.Po  savime-system_logger.Po  server.Po  system_logger.Po
core/include/: builder.h  config_manager.h  connection_manager.h  dynamic_bitset.h  engine.h  job_manager.h  metadata.h  optimizer.h  parser.h  query_data_manager.h  rtree.h  savime.h  savime_bitmask.h  storage_manager.h  system_logger.h  util.h
docs/: aggregate_8h.html  aggregate_8h__incl.map  aggregate_8h__incl.md5  aggregate_8h_source.html  annotated.html  bison_8cpp.html  bison_8cpp__incl.map  bison_8cpp__incl.md5  bison_8h.html  bison_8h_source.html  builder_8cpp.html  builder_8cpp__incl.map  builder_8cpp__incl.md5  builder_8h.html  builder_8h__incl.map  builder_8h__incl.md5  builder_8h_source.html  catalyst_8cpp.html  catalyst_8cpp__incl.map  catalyst_8cpp__incl.md5  classBitStringLiteral-members.html  classBitStringLiteral.html  classBooleanValueExpression-members.html  classBooleanValueExpression.html  classCharacterStringLiteral-members.html  classCharacterStringLiteral.html  classCompOp-members.html  classCompOp.html  classComparisonPredicate-members.html  classComparisonPredicate.html  classConfigurationManager.html  classConnectionListener.html  classConnectionListener__inherit__graph.map  classConnectionListener__inherit__graph.md5  classConnectionManager-members.html  classConnectionManager.html  classDataElement-members.html  classDataElement.html  classDataElement__coll__graph.map  classDataElement__coll__graph.md5  (+560 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  (+131 more)
engine/: Makefile  Makefile.am  Makefile.in  aggregate.h  catalyst.cpp  ddl_operators.cpp  ddl_operators.h  default_engine.cpp  default_engine.h  dimjoin.h  dml_operators.cpp  dml_operators.h  savime_catalyst  viz.cpp  viz.h
engine/.deps/: catalyst.Po  ddl_operators.Po  default_engine.Po  dml_operators.Po  savime-ddl_operators.Po  savime-default_engine.Po  savime-dml_operators.Po  savime-viz.Po  savime_catalyst-catalyst.Po  viz.Po
etc/: savime.boot  savime.config
job/: default_job_manager.cpp  default_job_manager.h  default_server_job.cpp  default_server_job.h
lib/: protocol.h  savime_lib.cpp  savime_lib.h  savime_lib.lo
mapped_memory/: Makefile.am  mapped_memory.cpp  mapped_memory.h
metada/: default_metada_manager.h  default_metadata_manager.cpp
nbproject/: configurations.xml  project.xml
optimizer/: default_optimizer.h
parser/: bison.cpp  bison.h  build_grammar.sh  default_parser.cpp  default_parser.h  flex.cpp  flex.h  grammar.y  lexer.l  schema_builder.cpp  schema_builder.h  tree.h
query/: default_query_data_manager.cpp  default_query_data_manager.h
rdmap/: Makefile  Makefile.am  Makefile.in  client.cpp  common.cpp  librdmap.la  librdmap_la-client.lo  librdmap_la-common.lo  librdmap_la-messages.lo  librdmap_la-server.lo  rdmap.cpp  rdmap.h  server.cpp
staging/: Makefile  Makefile.am  TODO  rdma_utils.cpp  rdma_utils.h  server.cpp  staging  staging.cpp  staging.h  stserver.cpp  ststaging  test_buffer  test_buffer.cpp  test_files  test_files.cpp
staging/.deps/: client.Po  common.Po  rdma_utils.Plo  server.Po  staging.Plo  stserver.Po  test_buffer.Po  test_files.Po
storage/: default_storage_manager.cpp  default_storage_manager.h  default_template.h
test/: nohup.out  test_savime.sh  test_savime_catalyst.sh  x.data  y.data  z.data
util/: chann.h  query_table.h
(+42 files in other folders)
